# multi-objective-recsys

./: .gitignore  Dockerfile  Exploration.ipynb  Makefile  README.md  docker-compose.yaml  requirements.txt  setup.cfg
brain/: Exploration.ipynb  Visualize User Behavior.ipynb  cloud.py  config.py  requirements.txt  scratch.py
notebooks/: Exploration.ipynb  Scratch.ipynb
otto/: als_model.py  config.py  evaluation.py  functions.py  model_als.py  model_w2v.py  scratch.py  transform.py  utils.py
otto/models/: w2v.py
scripts/: install_gpu_driver.sh  repo_init.sh
