[metadata]
name = otto
version = 1.0
description = A Kaggle competition for creating recommendation predictions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zachtsk/multi-objective-recsys
author = zachtsk
author_email = zach.polke@hey.com
license = MIT
license_file = LICENSE
license_files =
    licenses/microsoft_vscode_LICENSE.txt
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =
    pyspark
    gensim==4.3.0
    annoy>=1.*
python_requires = >=3.8